# ofxstatement-consorsbank

./: .gitignore  CHANGELOG.md  Pipfile  README.md  README.rst  debug_pdf.py  pyproject.toml
.github/workflows/: test.yml
src/ofxstatement_consorsbank/: __init__.py  plugin.py
tests/: test_plugin.py
