[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-consorsbank"
version = "0.1.0"
authors = [
  { name="Eduard Ralph" },
]
description = "ofxstatement plugin for Consorsbank (BNP Paribas) PDF statements"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "consorsbank"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.urls]
Homepage = "https://github.com/kedder/ofxstatement-consorsbank/"

[project.entry-points."ofxstatement"]
consorsbank = "ofxstatement_consorsbank.plugin:ConsorsPlugin"

[tool.setuptools.packages.find]
where = ["src"]
