[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-consorsbank"
version = "0.2.3"
authors = [
  { name="Eduard Ralph" },
]
description = "ofxstatement plugin for Consorsbank (BNP Paribas) PDF and CSV statements"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "consorsbank"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.urls]
Homepage = "https://github.com/eduralph/ofxstatement-consorsbank/"

[project.entry-points."ofxstatement"]
consorsbank = "ofxstatement_consorsbank.plugin:ConsorsPlugin"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=ofxstatement_consorsbank",
    "--cov-report=term-missing",
    "--no-cov-on-fail",
]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
